--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                         </div>
                         <div class="skill-item">
                             <i class="fas fa-language"></i>
-                            <span>Inglés (Intermedio)</span>
+                            <span>Inglés (B1)</span>
                         </div>
                     </div>
                 </div>
