Mejora las animaciones de scroll implementando transiciones más naturales y fluidas, corrige problemas de alineación visual en varias secciones

--- a/index.html
+++ b/index.html
@@ -69,26 +69,26 @@
 
         <div class="container hero-container">
             <div class="hero-content">
-                <div class="hero-badge fade-in">
+                <div class="hero-badge reveal fade-bottom">
                     <i class="fas fa-code"></i>
                     <span>Estudiante de 3er Año</span>
                 </div>
 
-                <h1 class="hero-title fade-in">
+                <h1 class="hero-title reveal fade-bottom delay-100">
                     Hola, soy <span class="gradient-text">Carlos Avello</span>
                 </h1>
 
-                <h2 class="hero-subtitle fade-in">
+                <h2 class="hero-subtitle reveal fade-bottom delay-200">
                     Estudiante de Ingeniería Informática | Duoc UC
                 </h2>
 
-                <p class="hero-description fade-in">
+                <p class="hero-description reveal fade-bottom delay-300">
                     Enfocado en tecnologías emergentes y en el desarrollo de aplicaciones prácticas.
                     Me apasiona el mundo de la inteligencia artificial y busco aportar a la comunidad mediante la
                     innovación tecnológica.
                 </p>
 
-                <div class="hero-cta fade-in">
+                <div class="hero-cta reveal fade-bottom delay-400">
                     <a href="#projects" class="btn btn-primary">
                         <span>Ver Proyectos</span>
                         <i class="fas fa-arrow-right"></i>
@@ -115,13 +115,13 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header reveal fade-bottom">
                 <span class="section-tag">Perfil</span>
                 <h2 class="section-title">Sobre Mí</h2>
             </div>
 
             <div class="about-content">
-                <div class="about-text">
+                <div class="about-text reveal fade-left">
                     <p class="about-intro">
                         Estudiante de 3er año de <strong>Ingeniería en Informática</strong> en Duoc UC.
                         Comencé mis estudios en Marzo 2023 y actualmente sigo desarrollándome profesionalmente.
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="about-visual">
-                    <div class="profile-card">
+                    <div class="profile-card reveal zoom-in">
                         <div class="profile-image">
                             <img src="css/perfil.png" alt="Carlos Avello" class="profile-photo">
                         </div>
@@ -194,7 +194,7 @@
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header reveal fade-bottom">
                 <span class="section-tag">Portafolio</span>
                 <h2 class="section-title">Proyectos de Aprendizaje</h2>
                 <p class="section-description">
@@ -204,7 +204,7 @@
 
             <div class="projects-grid">
                 <!-- Project 1: AI Dental Matching -->
-                <article class="project-card">
+                <article class="project-card reveal fade-bottom">
                     <div class="project-header">
                         <div class="project-icon">
                             <i class="fas fa-brain"></i>
@@ -339,14 +339,14 @@
     <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header reveal fade-bottom">
                 <span class="section-tag">Conocimientos</span>
                 <h2 class="section-title">Habilidades e Intereses</h2>
             </div>
 
             <div class="skills-grid">
                 <!-- Technical -->
-                <div class="skill-category">
+                <div class="skill-category reveal fade-bottom">
                     <div class="category-header">
                         <i class="fas fa-code"></i>
                         <h3>Técnicas (Nivel Básico)</h3>
@@ -417,13 +417,13 @@
     <!-- Achievements Section -->
     <section id="achievements" class="achievements">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header reveal fade-bottom">
                 <span class="section-tag">Trayectoria</span>
                 <h2 class="section-title">Logros y Liderazgo</h2>
             </div>
 
             <div class="achievements-grid">
-                <div class="achievement-card">
+                <div class="achievement-card reveal fade-bottom">
                     <div class="achievement-icon">
                         <i class="fas fa-trophy"></i>
                     </div>
@@ -435,7 +435,7 @@
                     </div>
                 </div>
 
-                <div class="achievement-card">
+                <div class="achievement-card reveal fade-bottom">
                     <div class="achievement-icon">
                         <i class="fas fa-trophy"></i>
                     </div>
@@ -447,7 +447,7 @@
                     </div>
                 </div>
 
-                <div class="achievement-card">
+                <div class="achievement-card reveal fade-bottom">
                     <div class="achievement-icon">
                         <i class="fas fa-users"></i>
                     </div>
